# Jentic-11-LLM-Powered-API-Discovery-System

./: CONTRIBUTING.md  LICENSE  README.md  module2.txt  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Execution/: Execution_Plan.md
configs/: settings.yaml
domains/weather/: config.yaml  queries.yaml
modules/: __init__.py  config.py  discovery.py  search.py
scripts/: discover.py
tests/: conftest.py  test_discovery_module.py  test_search_module.py
